--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-forms": "^1.0.0-3",
+    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
